[gd_scene load_steps=23 format=2]

[ext_resource path="res://2UI/LevelUI.gd" type="Script" id=1]
[ext_resource path="res://2UI/Content.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.14902, 0.219608, 1 )
border_color = Color( 0.223529, 0.34902, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0980392, 0.14902, 0.219608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.223529, 0.34902, 0.513726, 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://2Resources/Minecraft.ttf"

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.32127, 0.446627, 0.61377, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.223529, 0.34902, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0980392, 0.14902, 0.219608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.223529, 0.34902, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.32127, 0.446627, 0.61377, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.223529, 0.34902, 0.513726, 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.321569, 0.447059, 0.615686, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.164706, 0.247059, 0.356863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.164706, 0.247059, 0.356863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.129412, 0.196078, 0.286275, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.164706, 0.247059, 0.356863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=20]
extra_spacing_top = 4
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0980392, 0.14902, 0.219608, 1 )
border_color = Color( 0.223529, 0.34902, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.321569, 0.447059, 0.615686, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.164706, 0.247059, 0.356863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=12]
extra_spacing_top = 3
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.129412, 0.196078, 0.286275, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.121569, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=14]
size = 20
extra_spacing_top = 4
font_data = SubResource( 3 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitUIs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterPanel" type="Panel" parent="."]
margin_left = 96.0
margin_top = -4.0
margin_right = 416.0
margin_bottom = 68.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerPanel" type="Panel" parent="OuterPanel"]
margin_left = 4.0
margin_right = 316.0
margin_bottom = 68.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="OuterPanel/InnerPanel"]
margin_left = 4.0
margin_top = 24.0
margin_right = 308.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "18 December 2020"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterPanel2" type="Panel" parent="."]
margin_left = 8.0
margin_top = -4.0
margin_right = 88.0
margin_bottom = 68.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleLog" type="Button" parent="OuterPanel2"]
margin_left = 4.0
margin_right = 76.0
margin_bottom = 68.0
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterPanel3" type="Panel" parent="."]
margin_left = 1192.0
margin_top = -8.0
margin_right = 1272.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="OuterPanel3"]
margin_left = 4.0
margin_right = 76.0
margin_bottom = 68.0
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0

[node name="UnitPanel" type="Panel" parent="."]
margin_left = -8.0
margin_top = 516.0
margin_right = 220.0
margin_bottom = 712.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerPanel" type="Panel" parent="UnitPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 224.0
margin_bottom = 192.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UnitPanel/InnerPanel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 208.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Unit List"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit_1" type="Button" parent="UnitPanel/InnerPanel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 212.0
margin_bottom = 72.0
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Unit 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit_2" type="Button" parent="UnitPanel/InnerPanel"]
margin_left = 8.0
margin_top = 76.0
margin_right = 212.0
margin_bottom = 108.0
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Unit 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit_3" type="Button" parent="UnitPanel/InnerPanel"]
margin_left = 8.0
margin_top = 112.0
margin_right = 212.0
margin_bottom = 144.0
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Unit 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit_4" type="Button" parent="UnitPanel/InnerPanel"]
margin_left = 8.0
margin_top = 148.0
margin_right = 212.0
margin_bottom = 180.0
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Unit 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_left = 1056.0
margin_right = 1272.0
margin_bottom = 200.0
focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerPanel" type="Panel" parent="Popup"]
margin_left = 140.0
margin_top = -8.0
margin_right = 212.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Panel" parent="Popup"]
margin_top = 52.0
margin_right = 216.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 9 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="Button" parent="Popup/Content"]
margin_left = 12.0
margin_top = 12.0
margin_right = 204.0
margin_bottom = 48.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "MUTE SOUND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Popup/Content"]
margin_left = 12.0
margin_top = 56.0
margin_right = 204.0
margin_bottom = 92.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "RESTART LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Popup/Content"]
margin_left = 12.0
margin_top = 100.0
margin_right = 204.0
margin_bottom = 136.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "EXIT TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTurn" type="Button" parent="."]
margin_left = 1068.0
margin_top = 668.0
margin_right = 1272.0
margin_bottom = 712.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "START TURN"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OuterPanel2/BattleLog" to="." method="_on_BattleLog_pressed"]
[connection signal="pressed" from="OuterPanel3/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Popup/Content/Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="Popup/Content/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Popup/Content/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="StartTurn" to="." method="_on_StartTurn_pressed"]
